Refactor Flutter Linux Desktop Environment plugin: - Update .gitignore to exclude build directories. - Modify c_cpp_properties.json to include GTK and GLib paths. - Enhance main.dart to display the current Desktop Environment. - Remove outdated integration and widget tests. - Update pubspec.yaml and pubspec.lock for versioning and dependencies. - Revise CMakeLists.txt to disable test target. - Implement native method channel for retrieving Desktop Environment. - Clean up unused files and improve code structure.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,10 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "*.cpp": "cpp",
-    "chrono": "cpp"
-  }
+    "chrono": "cpp",
+    "cstdlib": "cpp",
+    "random": "cpp",
+    "string": "cpp"
+  },
+  "C_Cpp.errorSquiggles": "disabled"
 }
